ingress/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webapp
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: error-service
            port:
              number: 8080
        path: /error
        pathType: Exact
      - backend:
          service:
            name: video-service
            port:
              number: 8080
        path: /video
        pathType: Exact
      - backend:
          service:
            name: stop-watch-svc
            port:
              number: 3500
        path: /time
        pathType: Exact
